replace foundation with engineroom and collapse all wave terminology
